<resources>
    <string name="app_name">Git Hub User</string>
    <string name="username">username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">%d Followers</string>
    <string name="following">%d Following</string>
    <string name="cari_user">cari user</string>
    <string name="cari">cari</string>
    <string name="location">location</string>
    <string name="profile_big">profile big</string>
    <string name="icon_perusahaan">icon perusahaan</string>
    <string name="icon_repo">icon repo</string>
    <string name="profile_kecil">profile kecil</string>
    <string name="favorite">favorite</string>
    <string name="setting">setting</string>
    <string name="button_favorite">button favorite</string>
    <string name="status_koneksi">status koneksi</string>
</resources>