<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".ui.view.activities.DetailActivity">


    <ImageView
        android:id="@+id/iv_profile_pic_detail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profile_big"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tv_name_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/iv_profile_pic_detail"
        app:layout_constraintStart_toStartOf="@id/iv_profile_pic_detail"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_pic_detail"
        tools:text="nama panjang"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_username_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tv_name_detail"
        app:layout_constraintStart_toStartOf="@id/tv_name_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        tools:text="username"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/icon_work"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/icon_perusahaan"
        android:src="@drawable/ic_baseline_corporate_fare_24"
        app:layout_constraintEnd_toEndOf="@id/tv_perusahaan"
        app:layout_constraintEnd_toStartOf="@+id/icon_repo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username_detail" />

    <TextView
        android:id="@+id/tv_perusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/icon_work"
        app:layout_constraintTop_toBottomOf="@id/icon_work"
        app:layout_constraintEnd_toEndOf="@id/icon_work"
        tools:text="perusahaan"
        tools:textColor="@color/white" />

    <ImageView
        android:id="@+id/icon_repo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/icon_repo"
        android:src="@drawable/ic_baseline_archive_24"
        app:layout_constraintBottom_toBottomOf="@id/icon_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/icon_work"
        app:layout_constraintTop_toTopOf="@id/icon_work" />

    <TextView
        android:id="@+id/tv_repo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/icon_repo"
        app:layout_constraintStart_toStartOf="@id/icon_repo"
        app:layout_constraintTop_toBottomOf="@id/icon_repo"
        tools:text="repo"
        tools:textColor="@color/white" />


    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tv_name_detail"
        app:layout_constraintStart_toStartOf="@id/tv_name_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_name_detail"
        tools:text="@string/location" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_perusahaan"
        app:tabIndicatorColor="@color/aksen"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="5dp"
        app:tabTextColor="@color/white" />

    <com.google.android.material.card.MaterialCardView
        style="@style/MyCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout">


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/button_favorite"
        android:src="@drawable/ic_not_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>